@@ -1,0 +1,10 @@
+Title: Fixed race condition with persisted data
+Level: 1
+Component: checks
+Compatible: compat
+Version: 1.2.8p11
+Date: 1473673422
+Class: fix
+
+The deletion of the persisted file no longer causes
+an exception when the file is missing.
